Add new meta tags

--- a/projects/testSharing/index.html
+++ b/projects/testSharing/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:url" content=""/>
-    <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Заголовок"/>
-    <meta property="og:description" content=""/>
-    <meta property="og:image" content=""/>
-    <meta property="twitter:title" content=""/>
-    <meta property="twitter:description" content=""/>
-    <meta itemprop="name" content="" />
-    <meta itemprop="description" content=""/>
-    <meta itemprop="image" content=""/>
+    <meta property="og:url"/>
+    <meta property="og:type"/>
+    <meta property="og:title"/>
+    <meta property="og:description"/>
+    <meta property="og:image"/>
+    <meta property="twitter:title"/>
+    <meta property="twitter:description"/>
+    <meta itemprop="name"/>
+    <meta itemprop="description"/>
+    <meta itemprop="image"/>
     <title>Title</title>
 </head>
 <body>
