--- a/projects/testSharing/index.html
+++ b/projects/testSharing/index.html
@@ -19,9 +19,9 @@
 <script src="//yastatic.net/share2/share.js"></script>
 <article>
     <img  style="width: 300px; height: auto; display: block; margin: 20px auto 0 auto;" src="images/sergiosvision.jpg" alt="">
-    <h1 style="font-size: 18px; text-align: center; font-family: Verdana, sans-serif" class="title">SergiosVision THE BEST NIGGA IN THE WORLD</h1>
-    <h3 style="font-size: 16px; text-align: center; font-family: Verdana, sans-serif" class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, officiis?</h3>
-    <p style="font-size: 14px; text-align: center; font-family: Verdana, sans-serif" class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquid autem consequatur culpa cum doloremque eius ex excepturi facere illo iste iure labore laborum minus neque nulla perspiciatis provident quo quod quos recusandae sed, sequi sit tempora ut veritatis voluptatibus.</p>
+    <h1 style="font-size: 18px; text-align: center; font-family: Verdana, sans-serif">SergiosVision THE BEST NIGGA IN THE WORLD</h1>
+    <h3 style="font-size: 16px; text-align: center; font-family: Verdana, sans-serif">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, officiis?</h3>
+    <p style="font-size: 14px; text-align: center; font-family: Verdana, sans-serif">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquid autem consequatur culpa cum doloremque eius ex excepturi facere illo iste iure labore laborum minus neque nulla perspiciatis provident quo quod quos recusandae sed, sequi sit tempora ut veritatis voluptatibus.</p>
 </article>
 <div class="ya-share2"></div>
 <script src="js/script.js"></script>
