--- a/projects/testSharing/index.html
+++ b/projects/testSharing/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta property="og:url"/>
-    <meta property="og:type"/>
+    <meta property="og:type" content="article"/>
     <meta property="og:title"/>
     <meta property="og:description"/>
     <meta property="og:image"/>
