--- a/projects/testSharing/index.html
+++ b/projects/testSharing/index.html
@@ -12,7 +12,7 @@
     <meta itemprop="name"/>
     <meta itemprop="description"/>
     <meta itemprop="image"/>
-    <title>Title</title>
+    <title>Настройки для Yandex Share</title>
 </head>
 <body>
 <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
