--- a/projects/testSharing/index.html
+++ b/projects/testSharing/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="title"/>
+    <meta name="description"/>
     <meta property="og:url"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title"/>
