Add  Title and description for testing

--- a/projects/testSharing/index.html
+++ b/projects/testSharing/index.html
@@ -6,8 +6,8 @@
     <meta name="description"/>
     <meta property="og:url"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title"/>
-    <meta property="og:description"/>
+    <meta property="og:title" content="Тесты социалок"/>
+    <meta property="og:description" content="Тестируем для фэйсбук и Гугл+"/>
     <meta property="og:image"/>
     <meta property="twitter:title"/>
     <meta property="twitter:description"/>
