--- a/projects/testSharing/index.html
+++ b/projects/testSharing/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="title" content="Тесты социалок"/>
-    <meta name="description" content="Тестируем для фэйсбук и Гугл+"/>
+    <meta name="title"/>
+    <meta name="description"/>
     <meta property="og:url"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Тесты социалок"/>
