--- a/projects/JsonXhrRequest/index.html
+++ b/projects/JsonXhrRequest/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
     <title>Live Search</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
