Add working reset button

--- a/projects/JsonXhrRequest/index.html
+++ b/projects/JsonXhrRequest/index.html
@@ -11,7 +11,10 @@
     <div id="searcharea">
         <label for="search">Live Search</label>
         <p>Enter the name or info about a speaker</p>
-        <input type="text" name="search" id="search" value="" placeholder="Type your request">
+        <div class="inputAndReset">
+            <input type="text" name="search" id="search" value="" placeholder="Type your request">
+            <button type="button" class="resetBtn">Reset Field</button>
+        </div>
     </div>
     <div id="update"></div>
 <script src="js/script.js"></script>
