Add Smooth scroll and fix styles

--- a/projects/JsonXhrRequest/index.html
+++ b/projects/JsonXhrRequest/index.html
@@ -17,6 +17,7 @@
         </div>
     </div>
     <div id="update"></div>
+    <button type="button" class="scrollTopBth"></button>
 <script src="js/script.js"></script>
 </body>
 </html>
