--- a/projects/FetchRequest/index.html
+++ b/projects/FetchRequest/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-    <title>Live Search Ajax Example</title>
+    <title>Live Search Fetch Example</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
 </head>
 <body>
     <div id="searcharea">
-        <label for="search">Live Search Ajax Example</label>
+        <label for="search">Live Search Fetch Example</label>
         <p>Enter the name or info about a speaker</p>
         <div class="inputAndReset">
             <input type="text" name="search" id="search" value="" placeholder="Type your request">
