--- a/projects/FetchRequest/index.html
+++ b/projects/FetchRequest/index.html
@@ -17,6 +17,11 @@
         </div>
     </div>
     <div id="update"></div>
+    <div class="codeExample">
+        <code>
+
+        </code>
+    </div>
     <button type="button" class="scrollTopBth"></button>
 <script src="js/script.js"></script>
 </body>
