--- a/projects/FetchRequest/index.html
+++ b/projects/FetchRequest/index.html
@@ -18,9 +18,7 @@
     </div>
     <div id="update"></div>
     <div class="codeExample">
-        <code>
-
-        </code>
+        <a href="https://github.com/SergiosVision/SergiosVision.github.io/tree/master/projects/FetchRequest" target="_blank">Code Example GitHib</a>
     </div>
     <button type="button" class="scrollTopBth"></button>
 <script src="js/script.js"></script>
