--- a/projects/JsonXhrRequest/index.html
+++ b/projects/JsonXhrRequest/index.html
@@ -17,6 +17,9 @@
         </div>
     </div>
     <div id="update"></div>
+    <div class="codeExample">
+        <a href="https://github.com/SergiosVision/SergiosVision.github.io/tree/master/projects/JsonXhrRequest" target="_blank">Code Example GitHib</a>
+    </div>
     <button type="button" class="scrollTopBth"></button>
 <script src="js/script.js"></script>
 </body>
