--- a/projects/JsonXhrRequest/index.html
+++ b/projects/JsonXhrRequest/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-    <title>Live Search Ajax Example</title>
+    <title>Live Search XHR Example</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
 </head>
