Add scrollSpy But work not so good

--- a/projects/FetchRequest/index.html
+++ b/projects/FetchRequest/index.html
@@ -16,6 +16,9 @@
             <button type="button" class="resetBtn">Reset Field</button>
         </div>
     </div>
+    <nav class="navigation">
+        <ul></ul>
+    </nav>
     <div id="update"></div>
     <div class="codeExample">
         <a href="https://github.com/SergiosVision/SergiosVision.github.io/tree/master/projects/FetchRequest" target="_blank">Code Example GitHub</a>
