--- a/projects/FetchRequest/index.html
+++ b/projects/FetchRequest/index.html
@@ -15,6 +15,7 @@
             <input type="text" name="search" id="search" value="" placeholder="Type your request">
             <button type="button" class="resetBtn">Reset Field</button>
         </div>
+        <p class="support">Do not supported Internet Explorer</p>
     </div>
     <nav class="navigation">
         <ul></ul>
