--- a/projects/FetchRequest/index.html
+++ b/projects/FetchRequest/index.html
@@ -19,6 +19,13 @@
     </div>
     <nav class="navigation">
         <ul></ul>
+        <div class="spikersValue">
+            <div class="values">
+                <p>Notes - </p>
+                <span>0</span>
+            </div>
+            <span class="dontSee"></span>
+        </div>
     </nav>
     <div id="update"></div>
     <div class="codeExample">
