--- a/projects/fantatic/catalog.html
+++ b/projects/fantatic/catalog.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="/css/main.min.css">
     <link rel="stylesheet" href="/css/plugins/owl.carousel.min.css">
     <link rel="stylesheet" href="/css/plugins/owl.theme.default.min.css">
-    <link rel="stylesheet" href="/css/plugins/jquery.tosrus.all.css">
+    <link rel="stylesheet" href="/css/plugins/magnific-popup.css">
   </head>
   <body class="t-windowLoading fixed t-animeOne">
-    <div class="t-lightBoxOverlay"></div>
     <div class="wrapper">
       <div class="t-astronaut animation"></div>
       <div class="t-frame"></div>
@@ -682,8 +681,7 @@
     </div>
     <script src="/js/vendor.min.js"></script>
     <script src="/js/plugins/owl.carousel.min.js"></script>
-    <script src="/js/plugins/Hammer.js"></script>
-    <script src="/js/plugins/jquery.tosrus.all.min.js"></script>
+    <script src="/js/plugins/jquery.magnific-popup.min.js"></script>
     <script src="/js/reviewsSlider.js"></script>
     <script src="/js/main.min.js"></script>
   </body>
