--- a/projects/fantatic/index.html
+++ b/projects/fantatic/index.html
@@ -12,7 +12,7 @@
   <body class="t-windowLoading fixed t-animeOne">
     <div class="wrapper">
       <div class="t-astronaut animation"></div>
-      <div class="t-frame"></div>
+      <div style="display: none;" class="t-frame"></div>
       <div class="background topBackground animation"></div>
       <header class="hideHeader">
         <div class="t-catalog">
@@ -175,6 +175,8 @@
         <section class="t-allCategories">
           <h2 class="t-sectionTitle"> Все категории</h2>
           <div class="t-allCategoriesSlider">
+            <div class="t-prevBtn t-allCatSliderBtn"><img src="/images/icons/leftArrow.svg"></div>
+            <div class="t-nextBtn t-allCatSliderBtn"><img src="/images/icons/rightArrow.svg"></div>
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="t-slideImg"></div>
@@ -186,15 +188,15 @@
               </div>
               <div class="swiper-slide">
                 <div class="t-slideImg"></div>
-                <div class="t-slideInfo"><span class="t-nameOfCategory">Игры и игрушки</span><span class="t-value">200 наименований</span></div>
+                <div class="t-slideInfo"><span class="t-nameOfCategory">Гомер Симпсон</span><span class="t-value">5000 наименований</span></div>
               </div>
               <div class="swiper-slide">
                 <div class="t-slideImg"></div>
-                <div class="t-slideInfo"><span class="t-nameOfCategory">Игры и игрушки</span><span class="t-value">200 наименований</span></div>
+                <div class="t-slideInfo"><span class="t-nameOfCategory">Гомер Симпсон</span><span class="t-value">5000 наименований</span></div>
               </div>
               <div class="swiper-slide">
                 <div class="t-slideImg"></div>
-                <div class="t-slideInfo"><span class="t-nameOfCategory">Игры и игрушки</span><span class="t-value">200 наименований</span></div>
+                <div class="t-slideInfo"><span class="t-nameOfCategory">Гомер Симпсон</span><span class="t-value">5000 наименований</span></div>
               </div>
             </div>
           </div>
@@ -217,9 +219,16 @@
         <section class="t-trend">
           <h2 class="t-sectionTitle">В тренде</h2>
           <div class="t-cardsHolder">
-            <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                  <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+            <div class="t-goodsCard t-GoodsCardMain">
+              <div class="t-cardFigureHolder">
+                <div class="t-cardFigureOne"></div>
+                <div class="t-cardFigureTwo"></div>
+                <div class="t-cardFigureThird"></div>
+              </div><a href="/goodsOrder.html" class="t-goodsLink">
+                <div class="t-goodsCardImage">
+                  <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                  </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                   <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -248,9 +257,16 @@
                 </div></a>
               <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
             </div>
-            <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                  <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+            <div class="t-goodsCard t-GoodsCardMain">
+              <div class="t-cardFigureHolder">
+                <div class="t-cardFigureOne"></div>
+                <div class="t-cardFigureTwo"></div>
+                <div class="t-cardFigureThird"></div>
+              </div><a href="/goodsOrder.html" class="t-goodsLink">
+                <div class="t-goodsCardImage">
+                  <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                  </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                   <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -279,9 +295,16 @@
                 </div></a>
               <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
             </div>
-            <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                  <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+            <div class="t-goodsCard t-GoodsCardMain">
+              <div class="t-cardFigureHolder">
+                <div class="t-cardFigureOne"></div>
+                <div class="t-cardFigureTwo"></div>
+                <div class="t-cardFigureThird"></div>
+              </div><a href="/goodsOrder.html" class="t-goodsLink">
+                <div class="t-goodsCardImage">
+                  <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                  </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                   <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -316,8 +339,10 @@
           <h2 class="t-sectionTitle">Скидки</h2>
           <div class="t-cardsHolder">
             <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder2.html" class="t-goodsLink">
-                <div class="t-goodsCardImage"><img src="http://multsimpsons.ru/data/uploads/personaji/gomer.png" class="t-goodsCardImg t-goodsImgMain"/>
-                  <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCardImage">
+                  <div class="t-absImgHolder"><img src="http://multsimpsons.ru/data/uploads/personaji/gomer.png" class="t-goodsCardImg t-goodsImgMain"/>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                  </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                   <h3 class="t-goodsCardDescription t-goodsNameMain">Homer Simpson</h3><span class="t-goodsCardPrice t-goodsPriceMain">45 500 ₽</span>
@@ -347,8 +372,10 @@
               <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
             </div>
             <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder2.html" class="t-goodsLink">
-                <div class="t-goodsCardImage"><img src="http://multsimpsons.ru/data/uploads/personaji/gomer.png" class="t-goodsCardImg t-goodsImgMain"/>
-                  <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCardImage">
+                  <div class="t-absImgHolder"><img src="http://multsimpsons.ru/data/uploads/personaji/gomer.png" class="t-goodsCardImg t-goodsImgMain"/>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                  </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                   <h3 class="t-goodsCardDescription t-goodsNameMain">Homer Simpson</h3><span class="t-goodsCardPrice t-goodsPriceMain">45 500 ₽</span>
@@ -378,8 +405,10 @@
               <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
             </div>
             <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder2.html" class="t-goodsLink">
-                <div class="t-goodsCardImage"><img src="http://multsimpsons.ru/data/uploads/personaji/gomer.png" class="t-goodsCardImg t-goodsImgMain"/>
-                  <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCardImage">
+                  <div class="t-absImgHolder"><img src="http://multsimpsons.ru/data/uploads/personaji/gomer.png" class="t-goodsCardImg t-goodsImgMain"/>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                  </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                   <h3 class="t-goodsCardDescription t-goodsNameMain">Homer Simpson</h3><span class="t-goodsCardPrice t-goodsPriceMain">45 500 ₽</span>
