--- a/projects/fantatic/catalog.html
+++ b/projects/fantatic/catalog.html
@@ -12,7 +12,7 @@
   <body class="t-windowLoading fixed t-animeOne">
     <div class="wrapper">
       <div class="t-astronaut animation"></div>
-      <div class="t-frame"></div>
+      <div style="display: none;" class="t-frame"></div>
       <div class="background topBackground animation"></div>
       <header class="hideHeader">
         <div class="t-catalog">
@@ -139,9 +139,16 @@
                 <li class="t-sortContainerLinks"><span class="t-sortArrow t-sortArrowDown">По цене</span></li>
               </ul>
               <div class="t-cardsHolder">
-                <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                    <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                      <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCard t-GoodsCardMain">
+                  <div class="t-cardFigureHolder">
+                    <div class="t-cardFigureOne"></div>
+                    <div class="t-cardFigureTwo"></div>
+                    <div class="t-cardFigureThird"></div>
+                  </div><a href="/goodsOrder.html" class="t-goodsLink">
+                    <div class="t-goodsCardImage">
+                      <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                      </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                       <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -170,9 +177,16 @@
                     </div></a>
                   <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
                 </div>
-                <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                    <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                      <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCard t-GoodsCardMain">
+                  <div class="t-cardFigureHolder">
+                    <div class="t-cardFigureOne"></div>
+                    <div class="t-cardFigureTwo"></div>
+                    <div class="t-cardFigureThird"></div>
+                  </div><a href="/goodsOrder.html" class="t-goodsLink">
+                    <div class="t-goodsCardImage">
+                      <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                      </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                       <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -201,9 +215,16 @@
                     </div></a>
                   <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
                 </div>
-                <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                    <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                      <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCard t-GoodsCardMain">
+                  <div class="t-cardFigureHolder">
+                    <div class="t-cardFigureOne"></div>
+                    <div class="t-cardFigureTwo"></div>
+                    <div class="t-cardFigureThird"></div>
+                  </div><a href="/goodsOrder.html" class="t-goodsLink">
+                    <div class="t-goodsCardImage">
+                      <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                      </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                       <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -232,9 +253,16 @@
                     </div></a>
                   <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
                 </div>
-                <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                    <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                      <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCard t-GoodsCardMain">
+                  <div class="t-cardFigureHolder">
+                    <div class="t-cardFigureOne"></div>
+                    <div class="t-cardFigureTwo"></div>
+                    <div class="t-cardFigureThird"></div>
+                  </div><a href="/goodsOrder.html" class="t-goodsLink">
+                    <div class="t-goodsCardImage">
+                      <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                      </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                       <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -263,9 +291,16 @@
                     </div></a>
                   <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
                 </div>
-                <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                    <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                      <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCard t-GoodsCardMain">
+                  <div class="t-cardFigureHolder">
+                    <div class="t-cardFigureOne"></div>
+                    <div class="t-cardFigureTwo"></div>
+                    <div class="t-cardFigureThird"></div>
+                  </div><a href="/goodsOrder.html" class="t-goodsLink">
+                    <div class="t-goodsCardImage">
+                      <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                      </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                       <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -294,9 +329,16 @@
                     </div></a>
                   <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
                 </div>
-                <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                    <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                      <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCard t-GoodsCardMain">
+                  <div class="t-cardFigureHolder">
+                    <div class="t-cardFigureOne"></div>
+                    <div class="t-cardFigureTwo"></div>
+                    <div class="t-cardFigureThird"></div>
+                  </div><a href="/goodsOrder.html" class="t-goodsLink">
+                    <div class="t-goodsCardImage">
+                      <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                      </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                       <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -325,9 +367,16 @@
                     </div></a>
                   <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
                 </div>
-                <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                    <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                      <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCard t-GoodsCardMain">
+                  <div class="t-cardFigureHolder">
+                    <div class="t-cardFigureOne"></div>
+                    <div class="t-cardFigureTwo"></div>
+                    <div class="t-cardFigureThird"></div>
+                  </div><a href="/goodsOrder.html" class="t-goodsLink">
+                    <div class="t-goodsCardImage">
+                      <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                      </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                       <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -356,9 +405,16 @@
                     </div></a>
                   <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
                 </div>
-                <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                    <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                      <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCard t-GoodsCardMain">
+                  <div class="t-cardFigureHolder">
+                    <div class="t-cardFigureOne"></div>
+                    <div class="t-cardFigureTwo"></div>
+                    <div class="t-cardFigureThird"></div>
+                  </div><a href="/goodsOrder.html" class="t-goodsLink">
+                    <div class="t-goodsCardImage">
+                      <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                      </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                       <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -387,9 +443,16 @@
                     </div></a>
                   <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
                 </div>
-                <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                    <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                      <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCard t-GoodsCardMain">
+                  <div class="t-cardFigureHolder">
+                    <div class="t-cardFigureOne"></div>
+                    <div class="t-cardFigureTwo"></div>
+                    <div class="t-cardFigureThird"></div>
+                  </div><a href="/goodsOrder.html" class="t-goodsLink">
+                    <div class="t-goodsCardImage">
+                      <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                      </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                       <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -418,9 +481,16 @@
                     </div></a>
                   <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
                 </div>
-                <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                    <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                      <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCard t-GoodsCardMain">
+                  <div class="t-cardFigureHolder">
+                    <div class="t-cardFigureOne"></div>
+                    <div class="t-cardFigureTwo"></div>
+                    <div class="t-cardFigureThird"></div>
+                  </div><a href="/goodsOrder.html" class="t-goodsLink">
+                    <div class="t-goodsCardImage">
+                      <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                      </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                       <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -449,9 +519,16 @@
                     </div></a>
                   <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
                 </div>
-                <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                    <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                      <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCard t-GoodsCardMain">
+                  <div class="t-cardFigureHolder">
+                    <div class="t-cardFigureOne"></div>
+                    <div class="t-cardFigureTwo"></div>
+                    <div class="t-cardFigureThird"></div>
+                  </div><a href="/goodsOrder.html" class="t-goodsLink">
+                    <div class="t-goodsCardImage">
+                      <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                      </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                       <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -480,9 +557,16 @@
                     </div></a>
                   <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
                 </div>
-                <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                    <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                      <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                <div class="t-goodsCard t-GoodsCardMain">
+                  <div class="t-cardFigureHolder">
+                    <div class="t-cardFigureOne"></div>
+                    <div class="t-cardFigureTwo"></div>
+                    <div class="t-cardFigureThird"></div>
+                  </div><a href="/goodsOrder.html" class="t-goodsLink">
+                    <div class="t-goodsCardImage">
+                      <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                      </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                       <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
