--- a/projects/fantatic/goodsOrder2.html
+++ b/projects/fantatic/goodsOrder2.html
@@ -12,7 +12,7 @@
   <body class="t-windowLoading fixed t-animeOne">
     <div class="wrapper">
       <div class="t-astronaut animation"></div>
-      <div class="t-frame"></div>
+      <div style="display: none;" class="t-frame"></div>
       <div class="background topBackground animation"></div>
       <header class="hideHeader">
         <div class="t-catalog">
@@ -418,9 +418,16 @@
         <section class="t-interesting">
           <h2 class="t-sectionTitle">Возможно вас заинтересуют</h2>
           <div class="t-cardsHolder">
-            <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                  <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+            <div class="t-goodsCard t-GoodsCardMain">
+              <div class="t-cardFigureHolder">
+                <div class="t-cardFigureOne"></div>
+                <div class="t-cardFigureTwo"></div>
+                <div class="t-cardFigureThird"></div>
+              </div><a href="/goodsOrder.html" class="t-goodsLink">
+                <div class="t-goodsCardImage">
+                  <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                  </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                   <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -449,9 +456,16 @@
                 </div></a>
               <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
             </div>
-            <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                  <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+            <div class="t-goodsCard t-GoodsCardMain">
+              <div class="t-cardFigureHolder">
+                <div class="t-cardFigureOne"></div>
+                <div class="t-cardFigureTwo"></div>
+                <div class="t-cardFigureThird"></div>
+              </div><a href="/goodsOrder.html" class="t-goodsLink">
+                <div class="t-goodsCardImage">
+                  <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                  </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                   <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
@@ -480,9 +494,16 @@
                 </div></a>
               <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
             </div>
-            <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder.html" class="t-goodsLink">
-                <div class="t-goodsCardImage"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                  <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+            <div class="t-goodsCard t-GoodsCardMain">
+              <div class="t-cardFigureHolder">
+                <div class="t-cardFigureOne"></div>
+                <div class="t-cardFigureTwo"></div>
+                <div class="t-cardFigureThird"></div>
+              </div><a href="/goodsOrder.html" class="t-goodsLink">
+                <div class="t-goodsCardImage">
+                  <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                  </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
                   <h3 class="t-goodsCardDescription t-goodsNameMain">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</h3><span class="t-goodsCardPrice t-goodsPriceMain">32 500 ₽</span>
