--- a/projects/fantatic/guarantee.html
+++ b/projects/fantatic/guarantee.html
@@ -12,7 +12,7 @@
   <body class="t-windowLoading fixed t-animeOne">
     <div class="wrapper">
       <div class="t-astronaut animation"></div>
-      <div class="t-frame"></div>
+      <div style="display: none;" class="t-frame"></div>
       <div class="background topBackground animation"></div>
       <header class="hideHeader">
         <div class="t-catalog">
