--- a/projects/fantatic/catalog.html
+++ b/projects/fantatic/catalog.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/plugins/owl.theme.default.min.css">
     <link rel="stylesheet" href="/css/plugins/magnific-popup.css">
   </head>
-  <body class="t-windowLoading fixed t-animeOne">
+  <body class="t-windowLoading fixed t-animeOne hideAll">
     <div class="wrapper">
       <div class="t-astronaut animation"></div>
       <div style="display: none;" class="t-frame"></div>
@@ -147,7 +147,7 @@
                   </div><a href="/goodsOrder.html" class="t-goodsLink">
                     <div class="t-goodsCardImage">
                       <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                       </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -185,7 +185,7 @@
                   </div><a href="/goodsOrder.html" class="t-goodsLink">
                     <div class="t-goodsCardImage">
                       <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                       </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -223,7 +223,7 @@
                   </div><a href="/goodsOrder.html" class="t-goodsLink">
                     <div class="t-goodsCardImage">
                       <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                       </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -261,7 +261,7 @@
                   </div><a href="/goodsOrder.html" class="t-goodsLink">
                     <div class="t-goodsCardImage">
                       <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                       </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -299,7 +299,7 @@
                   </div><a href="/goodsOrder.html" class="t-goodsLink">
                     <div class="t-goodsCardImage">
                       <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                       </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -337,7 +337,7 @@
                   </div><a href="/goodsOrder.html" class="t-goodsLink">
                     <div class="t-goodsCardImage">
                       <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                       </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -375,7 +375,7 @@
                   </div><a href="/goodsOrder.html" class="t-goodsLink">
                     <div class="t-goodsCardImage">
                       <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                       </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -413,7 +413,7 @@
                   </div><a href="/goodsOrder.html" class="t-goodsLink">
                     <div class="t-goodsCardImage">
                       <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                       </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -451,7 +451,7 @@
                   </div><a href="/goodsOrder.html" class="t-goodsLink">
                     <div class="t-goodsCardImage">
                       <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                       </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -489,7 +489,7 @@
                   </div><a href="/goodsOrder.html" class="t-goodsLink">
                     <div class="t-goodsCardImage">
                       <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                       </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -527,7 +527,7 @@
                   </div><a href="/goodsOrder.html" class="t-goodsLink">
                     <div class="t-goodsCardImage">
                       <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                       </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -565,7 +565,7 @@
                   </div><a href="/goodsOrder.html" class="t-goodsLink">
                     <div class="t-goodsCardImage">
                       <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                        <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                       </div>
                     </div>
                     <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
