--- a/projects/fantatic/goodsOrder.html
+++ b/projects/fantatic/goodsOrder.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/plugins/owl.theme.default.min.css">
     <link rel="stylesheet" href="/css/plugins/magnific-popup.css">
   </head>
-  <body class="t-windowLoading fixed t-animeOne">
+  <body class="t-windowLoading fixed t-animeOne hideAll">
     <div class="wrapper">
       <div class="t-astronaut animation"></div>
       <div style="display: none;" class="t-frame"></div>
@@ -133,7 +133,11 @@
           </div>
           <div class="t-aboutGoodsCard t-GoodsCardMain">
             <div class="t-aboutGoodsImgContainer">
-              <div class="t-insideImg"><a href="/images/goodImage.png"><img src="/images/goodImage.png" class="t-goodsImgMain"></a><a href="/images/goodImage.png" class="t-hiddenImages"><img src="/images/goodImage.png"></a><a href="/images/goodImage.png" class="t-hiddenImages"><img src="/images/goodImage.png"></a><a href="https://sergiosvision.github.io/img/Person.png" class="t-hiddenImages"><img src="https://sergiosvision.github.io/img/Person.png"></a><a href="/images/goodImage.png" class="t-hiddenImages"><img src="/images/goodImage.png"></a><a href="/images/goodImage.png" class="t-hiddenImages"><img src="/images/goodImage.png"></a><a href="/images/goodImage.png" class="t-hiddenImages"><img src="/images/goodImage.png"></a></div>
+              <div class="t-insideImg">
+                <div class="t-insideImgHolder"><a href="/images/goodImage.png"><img src="/images/goodImage.png" class="t-goodsImgMain"></a><a href="/images/goodImage.png" class="t-hiddenImages"><img src="/images/goodImage.png"></a><a href="/images/goodImage.png" class="t-hiddenImages"><img src="/images/goodImage.png"></a><a href="https://sergiosvision.github.io/img/Person.png" class="t-hiddenImages"><img src="https://sergiosvision.github.io/img/Person.png"></a><a href="/images/goodImage.png" class="t-hiddenImages"><img src="/images/goodImage.png"></a><a href="/images/goodImage.png" class="t-hiddenImages"><img src="/images/goodImage.png"></a><a href="/images/goodImage.png" class="t-hiddenImages"><img src="/images/goodImage.png"></a>
+                  <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-ScaledCard"></div>
+                </div>
+              </div>
             </div>
             <div class="t-aboutGoodsInfoMain">
               <div class="t-aboutGoodsInfoMainHeader">
@@ -426,7 +430,7 @@
               </div><a href="/goodsOrder.html" class="t-goodsLink">
                 <div class="t-goodsCardImage">
                   <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                   </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -464,7 +468,7 @@
               </div><a href="/goodsOrder.html" class="t-goodsLink">
                 <div class="t-goodsCardImage">
                   <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                   </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -502,7 +506,7 @@
               </div><a href="/goodsOrder.html" class="t-goodsLink">
                 <div class="t-goodsCardImage">
                   <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                   </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
