--- a/projects/fantatic/guarantee.html
+++ b/projects/fantatic/guarantee.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/plugins/owl.theme.default.min.css">
     <link rel="stylesheet" href="/css/plugins/magnific-popup.css">
   </head>
-  <body class="t-windowLoading fixed t-animeOne">
+  <body class="t-windowLoading fixed t-animeOne hideAll">
     <div class="wrapper">
       <div class="t-astronaut animation"></div>
       <div style="display: none;" class="t-frame"></div>
