--- a/projects/fantatic/index.html
+++ b/projects/fantatic/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/plugins/owl.theme.default.min.css">
     <link rel="stylesheet" href="/css/plugins/magnific-popup.css">
   </head>
-  <body class="t-windowLoading fixed t-animeOne">
+  <body class="t-windowLoading fixed t-animeOne hideAll">
     <div class="wrapper">
       <div class="t-astronaut animation"></div>
       <div style="display: none;" class="t-frame"></div>
@@ -227,7 +227,7 @@
               </div><a href="/goodsOrder.html" class="t-goodsLink">
                 <div class="t-goodsCardImage">
                   <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                   </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -265,7 +265,7 @@
               </div><a href="/goodsOrder.html" class="t-goodsLink">
                 <div class="t-goodsCardImage">
                   <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                   </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -303,7 +303,7 @@
               </div><a href="/goodsOrder.html" class="t-goodsLink">
                 <div class="t-goodsCardImage">
                   <div class="t-absImgHolder"><img src="/images/goodImage.png" class="t-goodsCardImg t-goodsImgMain"/>
-                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                   </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -338,10 +338,15 @@
         <section class="t-discounts">
           <h2 class="t-sectionTitle">Скидки</h2>
           <div class="t-cardsHolder">
-            <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder2.html" class="t-goodsLink">
+            <div class="t-goodsCard t-GoodsCardMain">
+              <div class="t-cardFigureHolder">
+                <div class="t-cardFigureOne"></div>
+                <div class="t-cardFigureTwo"></div>
+                <div class="t-cardFigureThird"></div>
+              </div><a href="/goodsOrder2.html" class="t-goodsLink">
                 <div class="t-goodsCardImage">
                   <div class="t-absImgHolder"><img src="http://multsimpsons.ru/data/uploads/personaji/gomer.png" class="t-goodsCardImg t-goodsImgMain"/>
-                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                   </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -371,10 +376,15 @@
                 </div></a>
               <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
             </div>
-            <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder2.html" class="t-goodsLink">
+            <div class="t-goodsCard t-GoodsCardMain">
+              <div class="t-cardFigureHolder">
+                <div class="t-cardFigureOne"></div>
+                <div class="t-cardFigureTwo"></div>
+                <div class="t-cardFigureThird"></div>
+              </div><a href="/goodsOrder2.html" class="t-goodsLink">
                 <div class="t-goodsCardImage">
                   <div class="t-absImgHolder"><img src="http://multsimpsons.ru/data/uploads/personaji/gomer.png" class="t-goodsCardImg t-goodsImgMain"/>
-                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                   </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
@@ -404,10 +414,15 @@
                 </div></a>
               <button type="button" class="t-btn t-addToCart t-addToCartCard"><span>Добавить в корзину</span></button>
             </div>
-            <div class="t-goodsCard t-GoodsCardMain"><a href="/goodsOrder2.html" class="t-goodsLink">
+            <div class="t-goodsCard t-GoodsCardMain">
+              <div class="t-cardFigureHolder">
+                <div class="t-cardFigureOne"></div>
+                <div class="t-cardFigureTwo"></div>
+                <div class="t-cardFigureThird"></div>
+              </div><a href="/goodsOrder2.html" class="t-goodsLink">
                 <div class="t-goodsCardImage">
                   <div class="t-absImgHolder"><img src="http://multsimpsons.ru/data/uploads/personaji/gomer.png" class="t-goodsCardImg t-goodsImgMain"/>
-                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg"/></div>
+                    <div class="t-imgOverlay"><img src="/images/icons/plus.svg" class="t-WidthCard"/></div>
                   </div>
                 </div>
                 <div class="t-goodsCardInfo"><span class="t-goodsCardCategory">Подарки с юмором</span>
